--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,60 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Acceso Denegado</title>
+    <title>Google Signin</title>
+
+    <meta name="google-signin-client_id" content="401286733190-36bvf21mr6seoetdt9adv9b0leqgk71t.apps.googleusercontent.com">
 </head>
 
 <body>
-    <h1>Acceso Denegado</h1>
+    <h1>Google Signin</h1>
+    <hr>
+
+    <div class="g-signin2" data-onsuccess="onSignIn"></div>
+
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+
+    <a href="#" onclick="signOut();">Sign out</a>
+
+    <script>
+        console.log(window.location.hostname.includes('localhost'));
+
+        var url = (window.location.hostname.includes('localhost')) ?
+            'http://localhost:7000/api/auth/google' :
+            'https://restserver-node-rv.herokuapp.com/api/auth/google'
+
+
+        function onSignIn(googleUser) {
+            var profile = googleUser.getBasicProfile();
+            console.log('ID: ' + profile.getId()); // Do not send to your backend! Use an ID token instead.
+            console.log('Name: ' + profile.getName());
+            console.log('Image URL: ' + profile.getImageUrl());
+            console.log('Email: ' + profile.getEmail()); // This is null if the 'email' scope is not present.
+
+            var id_token = googleUser.getAuthResponse().id_token;
+            const data = {
+                id_token
+            };
+
+            fetch(url, {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify(data)
+                })
+                .then(resp => resp.json())
+                .then(data => console.log('Server', data))
+                .catch(console.log);
+        }
+
+        function signOut() {
+            var auth2 = gapi.auth2.getAuthInstance();
+            auth2.signOut().then(function() {
+                console.log('User signed out.');
+            });
+        }
+    </script>
 </body>
 
 </html>
